Add progress bar and spinner

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 	<!-- Stylesheets -->
 	<link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/bower_components/select2/select2.css" />
+	<link rel="stylesheet" type="text/css" href="/bower_components/angular-ui-select/dist/select.min.css" />
 	<link rel="stylesheet" type="text/css" href="/bower_components/angular-motion/dist/angular-motion.min.css" />
 	<link rel="stylesheet" type="text/css" href="/bower_components/bootstrap-additions/dist/bootstrap-additions.min.css" />
+	<link rel="stylesheet" type="text/css" href="/bower_components/angular-loading-bar/build/loading-bar.min.css" />
 	<!-- JS -->
 	<!-- XDomain library and slave declaration -->
-	<script type="text/javascript" src="/bower_components/xdomain/dist/0.6/xdomain.min.js"></script>
+	<script type="text/javascript" src="/bower_components/xdomain/dist/xdomain.min.js"></script>
 	<script type="text/javascript">
 	/* global xdomain */
 	xdomain.slaves({
@@ -34,11 +36,13 @@
 	<script type="text/javascript" src="/bower_components/angular-ui-select2/src/select2.js"></script>
 	<script type="text/javascript" src="/bower_components/ui-utils/ui-utils.min.js"></script>
 	<script type="text/javascript" src="/bower_components/select2/select2.js"></script>
+	<script type="text/javascript" src="/bower_components/angular-ui-select/dist/select.min.js"></script>
 	<script type="text/javascript" src="/bower_components/angular-img-fallback/angular.dcb-img-fallback.min.js"></script>
 	<script type="text/javascript" src="/bower_components/datejs/build/production/date.min.js"></script>
 	<script type="text/javascript" src="/bower_components/filesaverjs/filesaver.min.js"></script>
 	<script type="text/javascript" src="/bower_components/underscore/underscore-min.js"></script>
 	<script type="text/javascript" src="/bower_components/Autolinker.js/dist/Autolinker.min.js"></script>
+	<script type="text/javascript" src="/bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
 
 	<!-- Our Custom Libraries -->
 	<!-- Stylesheets -->
