Update messages to support objects and Modularize

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 			});
 		</script>
 		<script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
+		<script type="text/javascript" src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="/bower_components/angular/angular.js"></script>
 		<script type="text/javascript" src="/bower_components/angular-resource/angular-resource.js"></script>
 		<script type="text/javascript" src="/bower_components/angular-route/angular-route.js"></script>
@@ -57,9 +58,9 @@
 		<script type="text/javascript" src="/partials/schedule/subShifts/subShifts.js"></script>
 		<script type="text/javascript" src="/partials/schedule/schedule.js"></script>
 		<script type="text/javascript" src="/partials/directory/directory.js"></script>
+		<script type="text/javascript" src="/partials/message/messages.js"></script>
 		<script type="text/javascript" src="/js/generalService.js"></script>
 		<script type="text/javascript" src="/js/dataService.js"></script>
-		<script type="text/javascript" src="/js/controllers.js"></script>
 		<script type="text/javascript" src="/js/utility-controllers.js"></script>
 		<script type="text/javascript" src="/js/directives.js"></script>
 		<script type="text/javascript" src="/js/collapse.js"></script>
