--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 		<script type="text/javascript" src="/partials/schedule/schedule.js"></script>
 		<script type="text/javascript" src="/partials/directory/directory.js"></script>
 		<script type="text/javascript" src="/partials/message/messages.js"></script>
+		<script type="text/javascript" src="/partials/utilities/utilities.js"></script>
 		<script type="text/javascript" src="/js/generalService.js"></script>
 		<script type="text/javascript" src="/js/dataService.js"></script>
-		<script type="text/javascript" src="/js/utility-controllers.js"></script>
 		<script type="text/javascript" src="/js/directives.js"></script>
 		<script type="text/javascript" src="/js/collapse.js"></script>
 
