--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Testing Center EMS</title>
+		<meta version="2.0.0.0">
 		<!-- favicon -->
 		<link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
 		<link rel="icon" href="/favicon.png" type="image/x-icon">
