--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="version" content="2.0.0">
 		<title>Testing Center EMS</title>
-		<meta version="2.0.0.0">
 		<!-- favicon -->
 		<link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
 		<link rel="icon" href="/favicon.png" type="image/x-icon">
