Update facultyTestingInfo to support objects

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 		<script type="text/javascript" src="/partials/directory/directory.js"></script>
 		<script type="text/javascript" src="/partials/message/messages.js"></script>
 		<script type="text/javascript" src="/partials/utilities/utilities.js"></script>
+		<script type="text/javascript" src="/partials/faculty/faculty.js"></script>
 		<script type="text/javascript" src="/js/generalService.js"></script>
 		<script type="text/javascript" src="/js/dataService.js"></script>
 		<script type="text/javascript" src="/js/directives.js"></script>
