--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 		<script type="text/javascript" src="/partials/schedule/myAvailability/myAvailability.js"></script>
 		<script type="text/javascript" src="/partials/schedule/mySchedule/mySchedule.js"></script>
 		<script type="text/javascript" src="/partials/schedule/subShifts/subShifts.js"></script>
+		<script type="text/javascript" src="/partials/schedule/schedule/schedule.js"></script>
 		<script type="text/javascript" src="/partials/schedule/schedule.js"></script>
 		<script type="text/javascript" src="/partials/directory/directory.js"></script>
 		<script type="text/javascript" src="/partials/message/messages.js"></script>
