--- a/public/src/modules/shifts/directives/filter-semesters.client.directive.html
+++ b/public/src/modules/shifts/directives/filter-semesters.client.directive.html
@@ -6,19 +6,15 @@
 	</div>
 	<div class="panel-body">
 		<div data-ng-if="!properties.nextSemester.Id">
-			<button type="button" class="btn form-control" data-ng-class="{'btn-primary': ctrl.semester === 'currentSemester', 'btn-default': ctrl.semester === 'nextSemester'}" data-ng-click="ctrl.semester = 'currentSemester'">{{properties.currentSemester.ShiftGroup.Description}}</button>
-			<button type="button" class="btn form-control" data-ng-show="properties.nextSemester.Id" data-ng-class="{'btn-primary': ctrl.semester === 'nextSemester', 'btn-default': ctrl.semester === 'currentSemester'}" data-ng-click="ctrl.semester = 'nextSemester'">{{properties.nextSemester.ShiftGroup.Description}}</button>
-			<button type="button" class="btn form-control" data-ng-class="{'btn-primary': ctrl.semester === 'currentSemester', 'btn-default': ctrl.semester === 'nextSemester'}" data-ng-click="ctrl.semester = 'currentSemester'">{{properties.currentSemester.ShiftGroup.Description}}</button>
+			<button type="button" class="btn btn-primary form-control" data-ng-click="ctrl.semester = 'currentSemester'">{{currentSemester.ShiftGroup.Description}}</button>
 		</div>
 		<div class="btn-group btn-group-justified" data-ng-if="properties.nextSemester.Id">
-			<div class="btn-group" role="group">
-				<button type="button" class="btn form-control" data-ng-class="{'btn-primary': ctrl.semester === 'currentSemester', 'btn-default': ctrl.semester === 'nextSemester'}" data-ng-click="ctrl.semester = 'currentSemester'">{{properties.currentSemester.ShiftGroup.Description}}</button>
+			<div class="btn-group">
+				<button type="button" class="btn form-control" data-ng-class="{'btn-primary': ctrl.semester === 'currentSemester', 'btn-default': ctrl.semester === 'nextSemester'}" data-ng-click="ctrl.semester = 'currentSemester'">{{currentSemester.ShiftGroup.Description}}</button>
 			</div>
-			<div class="btn-group" role="group">
-				<button type="button" class="btn form-control" data-ng-class="{'btn-primary': ctrl.semester === 'nextSemester', 'btn-default': ctrl.semester === 'currentSemester'}" data-ng-click="ctrl.semester = 'nextSemester'">{{properties.nextSemester.ShiftGroup.Description}}</button>
+			<div class="btn-group">
+				<button type="button" class="btn form-control" data-ng-class="{'btn-primary': ctrl.semester === 'nextSemester', 'btn-default': ctrl.semester === 'currentSemester'}" data-ng-click="ctrl.semester = 'nextSemester'">{{nextSemester.ShiftGroup.Description}}</button>
 			</div>
-			<button type="button" class="btn form-control" data-ng-class="{'btn-primary': ctrl.semester === 'currentSemester', 'btn-default': ctrl.semester === 'nextSemester'}" data-ng-click="ctrl.semester = 'currentSemester'">{{currentSemester.ShiftGroup.Description}}</button>
-			<button type="button" class="btn form-control" data-ng-show="nextSemester.Id" data-ng-class="{'btn-primary': ctrl.semester === 'nextSemester', 'btn-default': ctrl.semester === 'currentSemester'}" data-ng-click="ctrl.semester = 'nextSemester'">{{nextSemester.ShiftGroup.Description}}</button>
 		</div>
 	</div>
 </div>
